Added dependencies for app

--- a/client/app/components/home/home.html
+++ b/client/app/components/home/home.html
@@ -1,6 +1,6 @@
 <navbar></navbar>
 <main>
   <div>
-    <h1>Found in {{ $ctrl.name }}.html</h1>
+    <h1 class="text-center">Found in {{ $ctrl.name }}.html</h1>
   </div>
 </main>
